# Algorithms

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: black.yml  codeql.yml  isort.yml  lint.yml  mypy.yml  pylint.yml  test.yml
Sorting/: README.md
Tools/: install_python.sh
src/sorting/: README.md  bubble.py  insertion.py  merge.py  selection.py
tests/helpers/: assertions.py
tests/sorting/: conftest.py  test_bubble.py  test_sorting.py
tools/: activate_venv.sh  bootstrap.sh  create_venv.sh  install_dependencies.sh  install_python.sh  lint.sh  script_setup.sh  teardown.sh  test.sh
tools_tmp/: activate_venv.sh  create_venv.sh  script_setup.sh
